# todo-app-react-fastapi

./: README.md  package.json
.github/workflows/: deploy-backend.yml
backend/: .env.sample  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  task.py  user.py
backend/app/core/: config.py  database.py
backend/app/crud/: task.py  user.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: task.py  user.py
backend/db/: alembic.ini
backend/db/development/: env.py
backend/db/development/versions/: b739fd426344_create_users_and_tasks_tables.py
backend/db/init/: 1_create_databases.sql
backend/db/migrations/: env.py
backend/tests/: conftest.py  test_tasks.py
frontend/: .gitignore  Dockerfile.local  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: footer.tsx  header.tsx  layout.tsx
frontend/src/components/tasks/: new-task-form.tsx  table.tsx  task-detail-sheet.tsx  task-filter-area.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  TasksPage.tsx
frontend/src/types/: task.ts
infrastructure/: README.md
infrastructure/docker/: compose.yml
infrastructure/terraform/: .gitignore
infrastructure/terraform/envs/dev/: backend.tf  main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/envs/prd/: backend.tf
infrastructure/terraform/modules/amplify/: main.tf  variables.tf
infrastructure/terraform/modules/bastion/: main.tf  variables.tf
infrastructure/terraform/modules/bastion/ssh/: bastion.pub
infrastructure/terraform/modules/container/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/network/: main.tf  variables.tf
infrastructure/terraform/modules/route53/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/shared/: provider.tf  variables.tf
